--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -90,9 +90,9 @@
                             <Border BorderBrush="Black" BorderThickness="2" Height="55" Canvas.Left="188" Canvas.Top="98" Width="395"  Background="White">
                                 <TextBox Name="txtLogin" TextWrapping="Wrap" Text="" FontSize="30" BorderBrush="{x:Null}" Background="{x:Null}" KeyDown="txtLogin_KeyDown"/>
                             </Border>
-                            <Border Name="btnCameraScan" Visibility="Visible" MouseDown="btnCamera_Click" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="586" Canvas.Top="90" Width="74" Height="74" >
-                                <StackPanel Orientation="Horizontal" MouseDown="btnCamera_Click">
-                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoCam.png" MouseDown="btnCamera_Click" RenderTransformOrigin="0.807,0.821" />
+                            <Border Name="btnCameraScan" Visibility="Visible"  MouseDown="btnCamera_Click" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="586" Canvas.Top="90" Width="74" Height="74" >
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Style="{StaticResource btnImage}" Source="/KrausRGA;component/Images/icoCam.png" RenderTransformOrigin="0.807,0.821" />
                                 </StackPanel>
                             </Border>
                         </Canvas>
