--- a/KrausxRGA/UI/wndCamera.xaml
+++ b/KrausxRGA/UI/wndCamera.xaml
@@ -11,28 +11,63 @@
     <Viewbox>
         <Border Height="1260" Width="800">
             <Canvas>
-                <Canvas Name="cvsCamera" Height="1078" Width="800">
-                <Grid RenderTransformOrigin="0.5,0.5" Height="810" Width="1085" Canvas.Left="-143" Canvas.Top="133">
+                <Canvas Name="cvsCamera" Height="1070" Width="800" Background="#FF26807B">
+                <Grid RenderTransformOrigin="0.5,0.5" Height="798" Width="1090" Canvas.Left="-145" Canvas.Top="137">
                     <Grid.RenderTransform>
                         <TransformGroup>
-                            <ScaleTransform/>
+                            <ScaleTransform ScaleX="-1" />
                             <SkewTransform/>
                             <RotateTransform Angle="90.00"/>
                             <TranslateTransform/>
                         </TransformGroup>
                     </Grid.RenderTransform>
-                    <cap:CapPlayer x:Name="player" Margin="0,-0,-0,0"/>
+                    <cap:CapPlayer x:Name="player" Margin="0,0,0,0"/>
                 </Grid>
                 </Canvas>
-                <Canvas Name="cvsControls" Height="173" Width="800" Canvas.Top="1083" Background="#FF636363">
-                    <Border Name="btnCapture" Visibility="Visible" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="10" Canvas.Top="10" Width="159" Height="153" >
-                            <Image Style="{StaticResource btnImage}" MouseDown="Image_MouseDown_2" Stretch="Fill" Source="/KrausRGA;component/Images/icoCam.png" RenderTransformOrigin="0.807,0.821" Width="97" Margin="33,16,25,32" />
+                <Canvas Name="cvsControls" Height="186" Width="800" Canvas.Top="1070" Background="#7F197671">
+                    <Border Name="bdrScanner" Height="16" Width="800" CornerRadius="5">
+                        <Border.Background>
+                            <RadialGradientBrush>
+                                <GradientStop Color="#FFB69999" Offset="0"/>
+                                <GradientStop Color="#FFB69999" Offset="1"/>
+                                <GradientStop Color="#B2C31E25" Offset="0.497"/>
+                            </RadialGradientBrush>
+                        </Border.Background>
+                        <Border.Style >
+                            <Style TargetType="{x:Type Border}">
+                                <Style.Triggers>
+                                    <Trigger Property="Visibility" Value="Visible">
+                                        <Trigger.EnterActions >
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation 
+                                                                Storyboard.TargetProperty="(Canvas.Top)" 
+                                                                From="0" 
+                                                                To="-1060"
+                                                                Duration="0:0:2"
+                                                        AutoReverse="True"
+                                                        
+                                                        >
+                                                    </DoubleAnimation>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </Trigger.EnterActions>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
                     </Border>
-                    <Border Name="btnClose" Visibility="Visible" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="631" Canvas.Top="10" Width="159" Height="153" >
-                        <Image Style="{StaticResource btnImage}" MouseDown="Image_MouseDown_1" Stretch="Fill" Source="/KrausRGA;component/Images/icoLogout.png" RenderTransformOrigin="0.807,0.821" Width="97" Margin="30,22,28,26" />
+                    <Border>
+                        <TextBlock Text="Camera" Name="tbInfoText" Foreground="WhiteSmoke" FontSize="35" Width="798"/>
                     </Border>
-                    <Border Name="btnScan" Visibility="Visible" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="205" Canvas.Top="10" Width="159" Height="153" >
-                        <Image Style="{StaticResource btnImage}" MouseDown="Image_MouseDown_3" Stretch="Fill" Source="/KrausRGA;component/Images/icoScan.png" RenderTransformOrigin="0.807,0.821" Width="97" Margin="30,22,28,26" />
+                    <Border Name="btnCapture" Visibility="Visible" MouseDown="Image_MouseDown_2" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="141" Canvas.Top="66" Width="140" Height="114" >
+                            <Image Style="{StaticResource btnImage}"  Stretch="Fill" Source="/KrausRGA;component/Images/icoCam.png" RenderTransformOrigin="0.807,0.821" Width="97" Margin="17,16,22,32" />
+                    </Border>
+                    <Border Name="btnClose" Visibility="Visible" MouseDown="Image_MouseDown_1"  CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="500" Canvas.Top="66" Width="139" Height="114" >
+                        <Image Style="{StaticResource btnImage}" Stretch="Fill" Source="/KrausRGA;component/Images/icoLogout.png" RenderTransformOrigin="0.807,0.821" Width="97" Margin="20,22,18,26" />
+                    </Border>
+                    <Border Name="btnScan" Visibility="Visible" MouseDown="Image_MouseDown_3" CornerRadius="50" Style="{StaticResource bdrWin8btn}" Canvas.Left="311" Canvas.Top="66" Width="138" Height="114" >
+                        <Image Style="{StaticResource btnImage}" Stretch="Fill" Source="/KrausRGA;component/Images/icoScan.png" RenderTransformOrigin="0.807,0.821" Width="97" Margin="18,22,19,26" />
                     </Border>
                 </Canvas>
                
