--- a/KrausxRGA/UI/wndCamera.xaml
+++ b/KrausxRGA/UI/wndCamera.xaml
@@ -25,7 +25,7 @@
                 </Grid>
                 </Canvas>
                 <Canvas Name="cvsControls" Height="186" Width="800" Canvas.Top="1070" Background="#7F197671">
-                    <Border Name="bdrScanner" Height="16" Width="800" CornerRadius="5">
+                    <Border Visibility="Hidden" Name="bdrScanner" Height="16" Width="800" CornerRadius="5">
                         <Border.Background>
                             <RadialGradientBrush>
                                 <GradientStop Color="#FFB69999" Offset="0"/>
@@ -46,7 +46,7 @@
                                                                 To="-1060"
                                                                 Duration="0:0:2"
                                                         AutoReverse="True"
-                                                        
+                                                        RepeatBehavior="Forever"
                                                         >
                                                     </DoubleAnimation>
                                                 </Storyboard>
